base/flask-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-flask-backend
  template:
    metadata:
      labels:
        app: demo-flask-backend
    spec:
      containers:
        - name: demo-flask-backend
          image: 292526779943.dkr.ecr.eu-central-1.amazonaws.com/demo-frontend:f95914ed
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
